version/0.19/_sources/api/solver/_autosummary/settings/piecewise_polynomial.rst.txt
:orphan:

.. _piecewise_polynomial:

piecewise_polynomial
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.piecewise_polynomial.piecewise_polynomial
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`piecewise_polynomial_child <piecewise_polynomial_child>`


.. rubric:: Included in:

==============================================================================   =======================================

Parent                                                                                                           Summary

==============================================================================   =======================================
:ref:`density <density>`                                                                                'density' child.

:ref:`viscosity <viscosity>`                                                                          'viscosity' child.

:ref:`specific_heat <specific_heat>`                                                              'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity>`                                         'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient>`                                   'absorption_coefficient' child.

:ref:`partition_coeff <partition_coeff>`                                                        'partition_coeff' child.

:ref:`scattering_coefficient <scattering_coefficient>`                                   'scattering_coefficient' child.

:ref:`diffusivity <diffusivity>`                                                                    'diffusivity' child.

:ref:`diffusivity_0 <diffusivity_0>`                                                              'diffusivity_0' child.

:ref:`diffusivity_1 <diffusivity_1>`                                                              'diffusivity_1' child.

:ref:`diffusivity_2 <diffusivity_2>`                                                              'diffusivity_2' child.

:ref:`radial_diffusivity <radial_diffusivity>`                                               'radial_diffusivity' child.

:ref:`tangential_diffusivity <tangential_diffusivity>`                                   'tangential_diffusivity' child.

:ref:`axial_diffusivity <axial_diffusivity>`                                                  'axial_diffusivity' child.

:ref:`electric_conductivity <electric_conductivity>`                                      'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`                       'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                            'lithium_diffusivity' child.

:ref:`speed_of_sound <speed_of_sound>`                                                           'speed_of_sound' child.

:ref:`saturation_pressure <saturation_pressure>`                                            'saturation_pressure' child.

:ref:`specific_heat <specific_heat_1>`                                                            'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_1>`                                       'thermal_conductivity' child.

:ref:`planar_conductivity <planar_conductivity>`                                            'planar_conductivity' child.

:ref:`transverse_conductivity <transverse_conductivity>`                                'transverse_conductivity' child.

:ref:`radial_conductivity <radial_conductivity>`                                            'radial_conductivity' child.

:ref:`tangential_conductivity <tangential_conductivity>`                                'tangential_conductivity' child.

:ref:`axial_conductivity <axial_conductivity>`                                               'axial_conductivity' child.

:ref:`conductivity_0 <conductivity_0>`                                                           'conductivity_0' child.

:ref:`conductivity_1 <conductivity_1>`                                                           'conductivity_1' child.

:ref:`conductivity_2 <conductivity_2>`                                                           'conductivity_2' child.

:ref:`conductivity <conductivity>`                                                                 'conductivity' child.

:ref:`scattering_coefficient <scattering_coefficient_1>`                                 'scattering_coefficient' child.

:ref:`viscosity <viscosity_1>`                                                                        'viscosity' child.

:ref:`specific_heat <specific_heat_2>`                                                            'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_2>`                                       'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient_1>`                                 'absorption_coefficient' child.

:ref:`density <density_3>`                                                                              'density' child.

:ref:`specific_heat <specific_heat_3>`                                                            'specific_heat' child.

:ref:`thermophoretic_co <thermophoretic_co>`                                                  'thermophoretic_co' child.

:ref:`viscosity <viscosity_2>`                                                                        'viscosity' child.

:ref:`dpm_surften <dpm_surften>`                                                                    'dpm_surften' child.

:ref:`electric_conductivity <electric_conductivity_1>`                                    'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity_1>`                     'dual_electric_conductivity' child.

:ref:`binary_diffusivity <binary_diffusivity_1>`                                             'binary_diffusivity' child.

:ref:`binary_diffusivity <binary_diffusivity>`                                               'binary_diffusivity' child.

:ref:`vapor_pressure <vapor_pressure>`                                                           'vapor_pressure' child.

:ref:`scattering_factor <scattering_factor_1>`                                                'scattering_factor' child.

:ref:`emissivity <emissivity_1>`                                                                     'emissivity' child.

:ref:`dpm_surften <dpm_surften_1>`                                                                  'dpm_surften' child.

:ref:`density <density_4>`                                                                              'density' child.

:ref:`binary_diffusivity <binary_diffusivity_2>`                                             'binary_diffusivity' child.

:ref:`relative_viscosity <relative_viscosity>`                                                       Relative Viscosity.

:ref:`capillary_pressure <capillary_pressure_1>`                                                     Capillary Pressure.

:ref:`pressure_jump <pressure_jump>`                                                                      Pressure Jump.

:ref:`loss_coefficient <loss_coefficient>`                                                             Loss Coefficient.

:ref:`hc <hc>`                                                                                Heat-Transfer-Coefficient.

:ref:`outlet_zone <outlet_zone>`                                                                            Outlet Zone.

:ref:`transfer_coefficient <transfer_coefficient>`                                            Heat-Transfer-Coefficient.

:ref:`dpm_bc_norm_coeff <dpm_bc_norm_coeff>`                                                                    Normal .

:ref:`dpm_bc_tang_coeff <dpm_bc_tang_coeff>`                                                                    Tangent.

:ref:`dpm_bc_frictn_coeff <dpm_bc_frictn_coeff>`                                                   Friction Coefficient.

:ref:`generic_impact_angle_function <generic_impact_angle_function>`                      Generic Impact Angle Function.

:ref:`generic_diameter_function <generic_diameter_function>`                                  Generic Diameter Function.

:ref:`generic_velocity_exponent_function <generic_velocity_exponent_function>`       Generic Velocity Exponent Function.

==============================================================================   =======================================

